<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetConnectActivity">

    <ImageView
        android:id="@+id/image_title"
        android:layout_width="221dp"
        android:layout_height="157dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/sym_def_app_icon" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="202dp"
        android:layout_height="57dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="60dp"
        android:text="@string/text_welcome_A2"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_title" />

    <Button
        android:id="@+id/button_continue"
        android:layout_width="113dp"
        android:layout_height="54dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="40dp"
        android:text="@string/button_continue_A2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scroll" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="433dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="480dp">

                <TextView
                    android:id="@+id/text_ip"
                    android:layout_width="wrap_content"
                    android:layout_height="46dp"
                    android:text="@string/text_ip_A2"
                    android:textAlignment="viewStart"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:translationX="12dp"
                    android:translationY="36dp" />

                <EditText
                    android:id="@+id/input_ip1"
                    android:layout_width="76dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:translationX="180dp"
                    android:translationY="36dp" />

                <EditText
                    android:id="@+id/input_ip2"
                    android:layout_width="76dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:translationX="260dp"
                    android:translationY="36dp" />

                <TextView
                    android:id="@+id/text_port"
                    android:layout_width="wrap_content"
                    android:layout_height="46dp"
                    android:text="@string/text_port_A2"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:translationX="12dp"
                    android:translationY="96dp" />

                <EditText
                    android:id="@+id/input_port"
                    android:layout_width="176dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:translationX="160dp"
                    android:translationY="96dp" />

                <TextView
                    android:id="@+id/text_fileType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_title_A3"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:translationX="12dp"
                    android:translationY="160dp" />

                <CheckBox
                    android:id="@+id/check_photos"
                    android:layout_width="322dp"
                    android:layout_height="wrap_content"
                    android:text="@string/fileType_photos"
                    android:translationX="12dp"
                    android:translationY="200dp" />

                <CheckBox
                    android:id="@+id/check_videos"
                    android:layout_width="322dp"
                    android:layout_height="wrap_content"
                    android:text="@string/fileType_videos"
                    android:translationX="12dp"
                    android:translationY="260dp" />
            </FrameLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>